tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__MagicMetalBerry-AAAAAAAAAAAAAAAAAAAHCw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1803,
  "prerequisites": [
    1607
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...is obviously the name of my cover band. But also a great crop for Thaumium or Void metals. Requires a block of iron or thaumium to get thaumium, and void metal block to get void metal. Like other ore berries, it only grows in dim light. Any oreberry should have a decent chance of yielding this.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Magic Metal Berry",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1607
  ],
  "rewards": [],
  "tasks": []
}
