tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__MetalsFromtheEar-AAAAAAAAAAAAAAAAAAAGQQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1601,
  "prerequisites": [
    1600
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With higher tier crops you can even increase your ore production. Mixing some of these fibers and leaves with crushed ores can quadruple your output, and some can even be converted directly to dust. Later you can mix these materials to make purified ore with some UU matter.\n\nShow me your ability to get these metal crops and I'll give you some more fertilizer and some decent stat seedbags of rarer crops. Good source crops are essence berries or any of the oreberries.\n\nYou will need the proper oreblock beneath the crop to reach 100 percent maturity. For best growing conditions use dirt in between the ore block and the crop.\n\nFor Ferru and Aurelia you will have to use a block of metal instead of a GT ore block - a vanilla ore block automined from the Twilight Forest will however work. You can also buy some from the coins tab. WAILA will tell you if the crop will accept the block you are using.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Metals From the Earth",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1600
  ],
  "rewards": [],
  "tasks": []
}
