tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__MoreRedLessWheat-AAAAAAAAAAAAAAAAAAAGyQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1737,
  "prerequisites": [
    1288
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When breeding together crops for an output crop, try to get crops that are close in tier to the output crop, and have similar attributes to the output crop.\n\nFor example, Redwheat has \"Red\", \"Wheat\" and \"Redstone\" attributes and is tier 6. Nether Wart has \"Red\" and is tier 5. Use the cropnalyzer crop prediction mode to see how many points Redwheat has using two Nether Wart.\n\nYou'll also want to make sure the light level is between 5-10 for this particular cross breeding to occur. Honestly, it's the worst, condition-wise.\n\nReally though, once you get to MV it's better to make a Glowstone crop and centrifuge it for redstone. Or a redstone block crop. Or just mine it, honestly. Red wheat == Dead wheat.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "More Red, Less Wheat",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1288
  ],
  "rewards": [],
  "tasks": []
}
